# eqa_action_execution

./: CMakeLists.txt  README.md  package.xml  setup.py
data/full_table_scene/: questions.json
launch/: start_image_savers.launch
scripts/: start_image_saver_nodes.py  start_in_other_dir.sh  task_execution.py
src/eqa/: action_classes.py  configure_execution.py  gripper_actions.py  manipulator_actions.py
